--- a/src/app/common.module.css
+++ b/src/app/common.module.css
@@ -27,11 +27,15 @@
 
 
 .formCtr {
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   flex-direction: row;
   height:var(--footer-height);
   align-items: center;
+  position: fixed;
+  bottom: 0px;
+  right:20px;
+  left:20px;
 }
 
 .inputCtr {
